--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.2",
+    "date-fns": "^2.15.0",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
